--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,8 +16,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.kuna.bgmstoremobile.Main"
+            android:name=".Main"
             android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="Info"></activity>
+        <activity android:name=".Info" />
     </application>
 
 </manifest>
